Porting from underscorejs to ramdajs
A much better library for functional
programming. Although lack of unzip
function costs additional dev-time,
the curried functions provide
clearer code that more than makes
up for it.

	modified:   index.html
	new file:   ramda.min.js
	modified:   script.js
	modified:   util.js

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<head>
 		<title>Some functional gaming!</title>
 
-		<!-- UNDERSCORE.JS -->
-		<script src="http://underscorejs.org/underscore.js"></script>
+		<!-- RAMDA.JS -->
+		<script src="ramda.min.js"></script>
 
 		<!-- KEY.JS -->
 		<script src="key.js"></script>
