Trying to pull from origin

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<head>
 		<title>Some functional gaming!</title>
 
-		<!-- UNDERSCORE.JS -->
-		<script src="http://underscorejs.org/underscore.js"></script>
+		<!-- RAMDA.JS -->
+		<script src="ramda.js"></script>
+		<!-- SET RAMDA TO _ -->
+		<script>_ = window._ = R;</script>
 
 		<!-- KEY.JS -->
 		<script src="key.js"></script>
